# lopper

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  pyproject.toml
lopper/: __init__.py  app.py  example_data.py
