[project]
name = "lopper"
version = "0.1.0"
description = "UI for pruning a scikit-learn DecisionTreeRegressor"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask>=3.0.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
lopper-app = "lopper.app:main"
lopper-generate-example = "lopper.example_data:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["lopper"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

